# qlocate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  package.sh
.github/workflows/: release.yml
src/: config.cpp  config.h  indexer.cpp  indexer.h  main.cpp  mainwindow.cpp  mainwindow.h  qlocate.toml  searcher.cpp  searcher.h
